--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,8 +14,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ledinhloc171@gmail.com
-    password: vxnc drsm xpjb ycua
+    username: ${EMAIL:abc}
+    password: ${PASSWORD:12}
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
