--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/uni_docs"
     username: root
-    password: root
+    password: 123456
   jpa:
     hibernate:
       ddl-auto: update
