--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,8 +5,8 @@ server:
 spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/uni_docs"
-    username: root
-    password: 123456
+    username: ${DATASOURCE_NAME:abc}
+    password: ${DATASOURCE_PASS:abc}
   jpa:
     hibernate:
       ddl-auto: update
